parser.output
Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: type ID ';'
    5     | func_def
    6     | error ';'

    7 type: TOK_INT
    8     | TOK_FLOAT
    9     | TOK_BOOL

   10 $@1: ε

   11 func_def: type ID '(' param_list_opt ')' $@1 block

   12 param_list_opt: ε
   13               | param_list

   14 param_list: param
   15           | param_list ',' param

   16 param: type ID

   17 block: '{' stmt_list '}'

   18 stmt_list: stmt_list stmt
   19          | ε

   20 stmt: type ID ';'
   21     | assign_stmt
   22     | input_stmt
   23     | output_stmt
   24     | if_stmt
   25     | while_stmt
   26     | for_stmt
   27     | return_stmt
   28     | block_stmt
   29     | ';'
   30     | error ';'

   31 $@2: ε

   32 block_stmt: '{' $@2 stmt_list '}'

   33 assign_stmt: ID ASSIGN expr ';'

   34 input_stmt: INPUT '(' in_list ')' ';'

   35 in_list: ID
   36        | in_list ',' ID

   37 output_stmt: OUTPUT '(' out_list ')' ';'

   38 out_list: out_item
   39         | out_list ',' out_item

   40 out_item: STRING
   41         | expr

   42 if_stmt: IF '(' expr ')' stmt
   43        | IF '(' expr ')' stmt ELSE stmt

   44 while_stmt: WHILE '(' expr ')' stmt

   45 for_stmt: FOR '(' for_init ';' expr ';' for_update ')' stmt

   46 for_init: assign_stmt_no_semi
   47         | type ID ASSIGN expr
   48         | ε

   49 for_update: assign_stmt_no_semi
   50           | ε

   51 assign_stmt_no_semi: ID ASSIGN expr

   52 return_stmt: RETURN expr ';'
   53            | RETURN ';'

   54 expr: INT_CONST
   55     | FLOAT_CONST
   56     | BOOL_CONST
   57     | ID
   58     | expr ADD expr
   59     | expr SUB expr
   60     | expr MUL expr
   61     | expr DIV expr
   62     | expr EQ expr
   63     | expr NE expr
   64     | expr LE expr
   65     | expr GE expr
   66     | expr LT expr
   67     | expr GT expr
   68     | expr LAND expr
   69     | expr LOR expr
   70     | LNOT expr
   71     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 34 37 42 43 44 45 71
    ')' (41) 11 34 37 42 43 44 45 71
    ',' (44) 15 36 39
    ';' (59) 4 6 20 29 30 33 34 37 45 52 53
    '{' (123) 17 32
    '}' (125) 17 32
    error (256) 6 30
    IF (258) 42 43
    ELSE (259) 43
    WHILE (260) 44
    FOR (261) 45
    RETURN (262) 52 53
    INPUT (263) 34
    OUTPUT (264) 37
    TOK_INT (265) 7
    TOK_FLOAT (266) 8
    TOK_BOOL (267) 9
    ID <sval> (268) 4 11 16 20 33 35 36 47 51 57
    STRING <sval> (269) 40
    INT_CONST <ival> (270) 54
    FLOAT_CONST <fval> (271) 55
    BOOL_CONST <bval> (272) 56
    ADD (273) 58
    SUB (274) 59
    MUL (275) 60
    DIV (276) 61
    EQ (277) 62
    NE (278) 63
    LE (279) 64
    GE (280) 65
    LT (281) 66
    GT (282) 67
    ASSIGN (283) 33 47 51
    LAND (284) 68
    LOR (285) 69
    LNOT (286) 70
    LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    program (40)
        on left: 1
        on right: 0
    decl_list (41)
        on left: 2 3
        on right: 1 2
    decl (42)
        on left: 4 5 6
        on right: 2 3
    type <type> (43)
        on left: 7 8 9
        on right: 4 11 16 20 47
    func_def (44)
        on left: 11
        on right: 5
    $@1 (45)
        on left: 10
        on right: 11
    param_list_opt (46)
        on left: 12 13
        on right: 11
    param_list (47)
        on left: 14 15
        on right: 13 15
    param (48)
        on left: 16
        on right: 14 15
    block (49)
        on left: 17
        on right: 11
    stmt_list (50)
        on left: 18 19
        on right: 17 18 32
    stmt (51)
        on left: 20 21 22 23 24 25 26 27 28 29 30
        on right: 18 42 43 44 45
    block_stmt (52)
        on left: 32
        on right: 28
    $@2 (53)
        on left: 31
        on right: 32
    assign_stmt (54)
        on left: 33
        on right: 21
    input_stmt (55)
        on left: 34
        on right: 22
    in_list (56)
        on left: 35 36
        on right: 34 36
    output_stmt (57)
        on left: 37
        on right: 23
    out_list (58)
        on left: 38 39
        on right: 37 39
    out_item (59)
        on left: 40 41
        on right: 38 39
    if_stmt (60)
        on left: 42 43
        on right: 24
    while_stmt (61)
        on left: 44
        on right: 25
    for_stmt (62)
        on left: 45
        on right: 26
    for_init (63)
        on left: 46 47 48
        on right: 45
    for_update (64)
        on left: 49 50
        on right: 45
    assign_stmt_no_semi (65)
        on left: 51
        on right: 46 49
    return_stmt (66)
        on left: 52 53
        on right: 27
    expr <type> (67)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 33 41 42 43 44 45 47 51 52 58 59 60 61 62 63 64 65 66 67 68 69 70 71


State 0

    0 $accept: • program $end

    error      shift, and go to state 1
    TOK_INT    shift, and go to state 2
    TOK_FLOAT  shift, and go to state 3
    TOK_BOOL   shift, and go to state 4

    program    go to state 5
    decl_list  go to state 6
    decl       go to state 7
    type       go to state 8
    func_def   go to state 9


State 1

    6 decl: error • ';'

    ';'  shift, and go to state 10


State 2

    7 type: TOK_INT •

    $default  reduce using rule 7 (type)


State 3

    8 type: TOK_FLOAT •

    $default  reduce using rule 8 (type)


State 4

    9 type: TOK_BOOL •

    $default  reduce using rule 9 (type)


State 5

    0 $accept: program • $end

    $end  shift, and go to state 11


State 6

    1 program: decl_list •
    2 decl_list: decl_list • decl

    error      shift, and go to state 1
    TOK_INT    shift, and go to state 2
    TOK_FLOAT  shift, and go to state 3
    TOK_BOOL   shift, and go to state 4

    $end  reduce using rule 1 (program)

    decl      go to state 12
    type      go to state 8
    func_def  go to state 9


State 7

    3 decl_list: decl •

    $default  reduce using rule 3 (decl_list)


State 8

    4 decl: type • ID ';'
   11 func_def: type • ID '(' param_list_opt ')' $@1 block

    ID  shift, and go to state 13


State 9

    5 decl: func_def •

    $default  reduce using rule 5 (decl)


State 10

    6 decl: error ';' •

    $default  reduce using rule 6 (decl)


State 11

    0 $accept: program $end •

    $default  accept


State 12

    2 decl_list: decl_list decl •

    $default  reduce using rule 2 (decl_list)


State 13

    4 decl: type ID • ';'
   11 func_def: type ID • '(' param_list_opt ')' $@1 block

    ';'  shift, and go to state 14
    '('  shift, and go to state 15


State 14

    4 decl: type ID ';' •

    $default  reduce using rule 4 (decl)


State 15

   11 func_def: type ID '(' • param_list_opt ')' $@1 block

    TOK_INT    shift, and go to state 2
    TOK_FLOAT  shift, and go to state 3
    TOK_BOOL   shift, and go to state 4

    $default  reduce using rule 12 (param_list_opt)

    type            go to state 16
    param_list_opt  go to state 17
    param_list      go to state 18
    param           go to state 19


State 16

   16 param: type • ID

    ID  shift, and go to state 20


State 17

   11 func_def: type ID '(' param_list_opt • ')' $@1 block

    ')'  shift, and go to state 21


State 18

   13 param_list_opt: param_list •
   15 param_list: param_list • ',' param

    ','  shift, and go to state 22

    $default  reduce using rule 13 (param_list_opt)


State 19

   14 param_list: param •

    $default  reduce using rule 14 (param_list)


State 20

   16 param: type ID •

    $default  reduce using rule 16 (param)


State 21

   11 func_def: type ID '(' param_list_opt ')' • $@1 block

    $default  reduce using rule 10 ($@1)

    $@1  go to state 23


State 22

   15 param_list: param_list ',' • param

    TOK_INT    shift, and go to state 2
    TOK_FLOAT  shift, and go to state 3
    TOK_BOOL   shift, and go to state 4

    type   go to state 16
    param  go to state 24


State 23

   11 func_def: type ID '(' param_list_opt ')' $@1 • block

    '{'  shift, and go to state 25

    block  go to state 26


State 24

   15 param_list: param_list ',' param •

    $default  reduce using rule 15 (param_list)


State 25

   17 block: '{' • stmt_list '}'

    $default  reduce using rule 19 (stmt_list)

    stmt_list  go to state 27


State 26

   11 func_def: type ID '(' param_list_opt ')' $@1 block •

    $default  reduce using rule 11 (func_def)


State 27

   17 block: '{' stmt_list • '}'
   18 stmt_list: stmt_list • stmt

    error      shift, and go to state 28
    IF         shift, and go to state 29
    WHILE      shift, and go to state 30
    FOR        shift, and go to state 31
    RETURN     shift, and go to state 32
    INPUT      shift, and go to state 33
    OUTPUT     shift, and go to state 34
    TOK_INT    shift, and go to state 2
    TOK_FLOAT  shift, and go to state 3
    TOK_BOOL   shift, and go to state 4
    ID         shift, and go to state 35
    ';'        shift, and go to state 36
    '{'        shift, and go to state 37
    '}'        shift, and go to state 38

    type         go to state 39
    stmt         go to state 40
    block_stmt   go to state 41
    assign_stmt  go to state 42
    input_stmt   go to state 43
    output_stmt  go to state 44
    if_stmt      go to state 45
    while_stmt   go to state 46
    for_stmt     go to state 47
    return_stmt  go to state 48


State 28

   30 stmt: error • ';'

    ';'  shift, and go to state 49


State 29

   42 if_stmt: IF • '(' expr ')' stmt
   43        | IF • '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 50


State 30

   44 while_stmt: WHILE • '(' expr ')' stmt

    '('  shift, and go to state 51


State 31

   45 for_stmt: FOR • '(' for_init ';' expr ';' for_update ')' stmt

    '('  shift, and go to state 52


State 32

   52 return_stmt: RETURN • expr ';'
   53            | RETURN • ';'

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    ';'          shift, and go to state 58
    '('          shift, and go to state 59

    expr  go to state 60


State 33

   34 input_stmt: INPUT • '(' in_list ')' ';'

    '('  shift, and go to state 61


State 34

   37 output_stmt: OUTPUT • '(' out_list ')' ';'

    '('  shift, and go to state 62


State 35

   33 assign_stmt: ID • ASSIGN expr ';'

    ASSIGN  shift, and go to state 63


State 36

   29 stmt: ';' •

    $default  reduce using rule 29 (stmt)


State 37

   32 block_stmt: '{' • $@2 stmt_list '}'

    $default  reduce using rule 31 ($@2)

    $@2  go to state 64


State 38

   17 block: '{' stmt_list '}' •

    $default  reduce using rule 17 (block)


State 39

   20 stmt: type • ID ';'

    ID  shift, and go to state 65


State 40

   18 stmt_list: stmt_list stmt •

    $default  reduce using rule 18 (stmt_list)


State 41

   28 stmt: block_stmt •

    $default  reduce using rule 28 (stmt)


State 42

   21 stmt: assign_stmt •

    $default  reduce using rule 21 (stmt)


State 43

   22 stmt: input_stmt •

    $default  reduce using rule 22 (stmt)


State 44

   23 stmt: output_stmt •

    $default  reduce using rule 23 (stmt)


State 45

   24 stmt: if_stmt •

    $default  reduce using rule 24 (stmt)


State 46

   25 stmt: while_stmt •

    $default  reduce using rule 25 (stmt)


State 47

   26 stmt: for_stmt •

    $default  reduce using rule 26 (stmt)


State 48

   27 stmt: return_stmt •

    $default  reduce using rule 27 (stmt)


State 49

   30 stmt: error ';' •

    $default  reduce using rule 30 (stmt)


State 50

   42 if_stmt: IF '(' • expr ')' stmt
   43        | IF '(' • expr ')' stmt ELSE stmt

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 66


State 51

   44 while_stmt: WHILE '(' • expr ')' stmt

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 67


State 52

   45 for_stmt: FOR '(' • for_init ';' expr ';' for_update ')' stmt

    TOK_INT    shift, and go to state 2
    TOK_FLOAT  shift, and go to state 3
    TOK_BOOL   shift, and go to state 4
    ID         shift, and go to state 68

    $default  reduce using rule 48 (for_init)

    type                 go to state 69
    for_init             go to state 70
    assign_stmt_no_semi  go to state 71


State 53

   57 expr: ID •

    $default  reduce using rule 57 (expr)


State 54

   54 expr: INT_CONST •

    $default  reduce using rule 54 (expr)


State 55

   55 expr: FLOAT_CONST •

    $default  reduce using rule 55 (expr)


State 56

   56 expr: BOOL_CONST •

    $default  reduce using rule 56 (expr)


State 57

   70 expr: LNOT • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 72


State 58

   53 return_stmt: RETURN ';' •

    $default  reduce using rule 53 (return_stmt)


State 59

   71 expr: '(' • expr ')'

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 73


State 60

   52 return_stmt: RETURN expr • ';'
   58 expr: expr • ADD expr
   59     | expr • SUB expr
   60     | expr • MUL expr
   61     | expr • DIV expr
   62     | expr • EQ expr
   63     | expr • NE expr
   64     | expr • LE expr
   65     | expr • GE expr
   66     | expr • LT expr
   67     | expr • GT expr
   68     | expr • LAND expr
   69     | expr • LOR expr

    ADD   shift, and go to state 74
    SUB   shift, and go to state 75
    MUL   shift, and go to state 76
    DIV   shift, and go to state 77
    EQ    shift, and go to state 78
    NE    shift, and go to state 79
    LE    shift, and go to state 80
    GE    shift, and go to state 81
    LT    shift, and go to state 82
    GT    shift, and go to state 83
    LAND  shift, and go to state 84
    LOR   shift, and go to state 85
    ';'   shift, and go to state 86


State 61

   34 input_stmt: INPUT '(' • in_list ')' ';'

    ID  shift, and go to state 87

    in_list  go to state 88


State 62

   37 output_stmt: OUTPUT '(' • out_list ')' ';'

    ID           shift, and go to state 53
    STRING       shift, and go to state 89
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    out_list  go to state 90
    out_item  go to state 91
    expr      go to state 92


State 63

   33 assign_stmt: ID ASSIGN • expr ';'

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 93


State 64

   32 block_stmt: '{' $@2 • stmt_list '}'

    $default  reduce using rule 19 (stmt_list)

    stmt_list  go to state 94


State 65

   20 stmt: type ID • ';'

    ';'  shift, and go to state 95


State 66

   42 if_stmt: IF '(' expr • ')' stmt
   43        | IF '(' expr • ')' stmt ELSE stmt
   58 expr: expr • ADD expr
   59     | expr • SUB expr
   60     | expr • MUL expr
   61     | expr • DIV expr
   62     | expr • EQ expr
   63     | expr • NE expr
   64     | expr • LE expr
   65     | expr • GE expr
   66     | expr • LT expr
   67     | expr • GT expr
   68     | expr • LAND expr
   69     | expr • LOR expr

    ADD   shift, and go to state 74
    SUB   shift, and go to state 75
    MUL   shift, and go to state 76
    DIV   shift, and go to state 77
    EQ    shift, and go to state 78
    NE    shift, and go to state 79
    LE    shift, and go to state 80
    GE    shift, and go to state 81
    LT    shift, and go to state 82
    GT    shift, and go to state 83
    LAND  shift, and go to state 84
    LOR   shift, and go to state 85
    ')'   shift, and go to state 96


State 67

   44 while_stmt: WHILE '(' expr • ')' stmt
   58 expr: expr • ADD expr
   59     | expr • SUB expr
   60     | expr • MUL expr
   61     | expr • DIV expr
   62     | expr • EQ expr
   63     | expr • NE expr
   64     | expr • LE expr
   65     | expr • GE expr
   66     | expr • LT expr
   67     | expr • GT expr
   68     | expr • LAND expr
   69     | expr • LOR expr

    ADD   shift, and go to state 74
    SUB   shift, and go to state 75
    MUL   shift, and go to state 76
    DIV   shift, and go to state 77
    EQ    shift, and go to state 78
    NE    shift, and go to state 79
    LE    shift, and go to state 80
    GE    shift, and go to state 81
    LT    shift, and go to state 82
    GT    shift, and go to state 83
    LAND  shift, and go to state 84
    LOR   shift, and go to state 85
    ')'   shift, and go to state 97


State 68

   51 assign_stmt_no_semi: ID • ASSIGN expr

    ASSIGN  shift, and go to state 98


State 69

   47 for_init: type • ID ASSIGN expr

    ID  shift, and go to state 99


State 70

   45 for_stmt: FOR '(' for_init • ';' expr ';' for_update ')' stmt

    ';'  shift, and go to state 100


State 71

   46 for_init: assign_stmt_no_semi •

    $default  reduce using rule 46 (for_init)


State 72

   58 expr: expr • ADD expr
   59     | expr • SUB expr
   60     | expr • MUL expr
   61     | expr • DIV expr
   62     | expr • EQ expr
   63     | expr • NE expr
   64     | expr • LE expr
   65     | expr • GE expr
   66     | expr • LT expr
   67     | expr • GT expr
   68     | expr • LAND expr
   69     | expr • LOR expr
   70     | LNOT expr •

    ADD  shift, and go to state 74
    SUB  shift, and go to state 75
    MUL  shift, and go to state 76
    DIV  shift, and go to state 77
    EQ   shift, and go to state 78
    NE   shift, and go to state 79
    LE   shift, and go to state 80
    GE   shift, and go to state 81
    LT   shift, and go to state 82
    GT   shift, and go to state 83

    $default  reduce using rule 70 (expr)


State 73

   58 expr: expr • ADD expr
   59     | expr • SUB expr
   60     | expr • MUL expr
   61     | expr • DIV expr
   62     | expr • EQ expr
   63     | expr • NE expr
   64     | expr • LE expr
   65     | expr • GE expr
   66     | expr • LT expr
   67     | expr • GT expr
   68     | expr • LAND expr
   69     | expr • LOR expr
   71     | '(' expr • ')'

    ADD   shift, and go to state 74
    SUB   shift, and go to state 75
    MUL   shift, and go to state 76
    DIV   shift, and go to state 77
    EQ    shift, and go to state 78
    NE    shift, and go to state 79
    LE    shift, and go to state 80
    GE    shift, and go to state 81
    LT    shift, and go to state 82
    GT    shift, and go to state 83
    LAND  shift, and go to state 84
    LOR   shift, and go to state 85
    ')'   shift, and go to state 101


State 74

   58 expr: expr ADD • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 102


State 75

   59 expr: expr SUB • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 103


State 76

   60 expr: expr MUL • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 104


State 77

   61 expr: expr DIV • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 105


State 78

   62 expr: expr EQ • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 106


State 79

   63 expr: expr NE • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 107


State 80

   64 expr: expr LE • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 108


State 81

   65 expr: expr GE • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 109


State 82

   66 expr: expr LT • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 110


State 83

   67 expr: expr GT • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 111


State 84

   68 expr: expr LAND • expr

    ID           shift, and go to state 53
    INT_CONST    shift, and go to state 54
    FLOAT_CONST  shift, and go to state 55
    BOOL_CONST   shift, and go to state 56
    LNOT         shift, and go to state 57
    '('          shift, and go to state 59

    expr  go to state 112


State 85

   69 expr: expr LOR • expr
